<resources>
    <string name="app_name">Love Android</string>
    <string name="app_version">1.0</string>
    <string name="hint_input_account">请输入账号</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="user_login_tip">用户登录</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="positive_button_text">确定</string>
    <string name="dialog_default_tip">请注意</string>
    <string name="home_label_text">主页</string>
    <string name="system_label_text">体系</string>
    <string name="square_label_text">广场</string>
    <string name="personal_label_text">个人</string>

</resources>
