<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="?attr/colorPrimary"
        android:fitsSystemWindows="true"
        app:title="@string/user_login_tip"
        app:titleMarginStart="25dp"
        app:titleTextColor="@color/white" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_account"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/hint_input_account"
            android:inputType="text"
            android:maxLines="1"
            android:textColorHint="@color/light_sea_green" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:hint="@string/hint_input_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColorHint="@color/light_sea_green" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="15dp"
            android:text="@string/register"
            android:textColor="@color/light_sea_green"
            android:background="@drawable/ripple_register_btn"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="30dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:background="@drawable/ripple_login_btn" />

    </LinearLayout>

</LinearLayout>