<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fragment_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/home_icon" />

            <TextView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:gravity="center_horizontal"
                android:text="@string/home_label_text"
                android:textColor="@color/sugar_green"
                android:textSize="12dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/system_icon" />

            <TextView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:gravity="center_horizontal"
                android:text="@string/system_label_text"
                android:textColor="@color/sugar_green"
                android:textSize="12dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/square_icon" />

            <TextView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:gravity="center_horizontal"
                android:text="@string/square_label_text"
                android:textColor="@color/sugar_green"
                android:textSize="12dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/personal_icon" />

            <TextView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:gravity="center_horizontal"
                android:text="@string/personal_label_text"
                android:textColor="@color/sugar_green"
                android:textSize="12dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>